packages/test-cases/cases/apis/wasm-rs/invalid-types/query/src/lib.rs
pub mod w3;
pub use w3::*;

pub fn bool_method(input: InputBoolMethod) -> bool {
    todo!()
}

pub fn int_method(input: InputIntMethod) -> i32 {
    todo!()
}

pub fn uint_method(input: InputUintMethod) -> u32 {
    todo!()
}

pub fn bytes_method(input: InputBytesMethod) -> Vec<u8> {
    todo!()
}

pub fn array_method(input: InputArrayMethod) -> Vec<String> {
    todo!()
}
